<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/smokyWhite"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/LinearLayout_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="20dp"
            android:paddingTop="?attr/actionBarSize"
            android:visibility="visible">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/title_form"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/form_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:focusableInTouchMode="true"
                android:focusedByDefault="false"
                android:hint="@string/title"
                android:lineHeight="10dp"
                android:textSize="20sp"></EditText>

            <EditText
                android:id="@+id/form_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:focusableInTouchMode="true"
                android:focusedByDefault="false"
                android:hint="@string/description"
                android:lineHeight="10dp"
                android:textSize="20sp"></EditText>

            <EditText
                android:id="@+id/form_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:focusableInTouchMode="true"
                android:focusedByDefault="false"
                android:hint="@string/price"
                android:inputType="numberDecimal"
                android:lineHeight="10dp"
                android:textSize="20sp"></EditText>


            <EditText
                android:id="@+id/form_tags"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:focusableInTouchMode="true"
                android:focusedByDefault="false"
                android:hint="@string/tag"
                android:lineHeight="10dp"
                android:textSize="20sp"></EditText>

            <EditText
                android:id="@+id/form_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:focusableInTouchMode="true"
                android:focusedByDefault="false"
                android:hint="@string/image"
                android:lineHeight="10dp"
                android:textSize="20sp"></EditText>

            <Button
                android:id="@+id/form_salvar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/salvar"></Button>
        </LinearLayout>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>